Library/AXL(Library)/Visual Basic(Net)/AXM.vb


' To Move Set Position or distance
' Absolute coordinates / position set to the coordinates relative to the set speed / acceleration rate to drive of specific Axis.
' Velocity Profile is fixed Asymmetric trapezoid.
' Accel/Decel Setting Unit is fixed Unit/Sec^2
' When dAccel is not 0.0 and dDecel is 0.0, it accelerates from the previous speed to the specified speed without deceleration.
' If dAccel is not 0.0 and dDecel is not 0.0, acceleration from the previous speed to the specified speed without deceleration.
' If dAccel is 0.0 and dDecel is not 0.0, acceleration from the previous speed to the specified speed without deceleration.

' The following conditions must be satisfied.
' dVel[1] == dVel[3] must be satisfied.
' dVel [2] that can occur as a constant speed drive range is greater dPosition should be enough.
' Ex) dPosition = 10000;
' dVel[0] = 300., dAccel[0] = 200., dDecel[0] = 0.;    <== Acceleration
' dVel[1] = 500., dAccel[1] = 100., dDecel[1] = 0.;    <== Acceleration
' dVel[2] = 700., dAccel[2] = 200., dDecel[2] = 250.;  <== Acceleration, constant velocity, Deceleration
' dVel[3] = 500., dAccel[3] = 0.,   dDecel[3] = 150.;  <== Deceleration
' dVel[4] = 200., dAccel[4] = 0.,   dDecel[4] = 350.;  <== Deceleration
' Exits API at the point that pulse out starts.
Public Declare Function AxmMoveStartPosWithList Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dPosition As Double, ByRef dpVel As Double, ByRef dpAccel As Double, ByRef dpDecel As Double, ByVal lListNum As Integer) As Integer



' Is set by the distance to the target axis position or the position to increase or decrease the movement begins.
' lEvnetAxisNo    : Start condition occurs axis.
' dComparePosition: Conditions Occurrence Area of Start condition occurs axis.
' uPositionSource : Set Conditions Occurrence Area of Start condition occurs axis => COMMAND(0), ACTUAL(1)
' Cancellations after reservation AxmMoveStop, AxmMoveEStop, AxmMoveSStop use
' Motion Axis and Start condition occurs axis must be In same group(case by 2V04 In same module).
Public Declare Function AxmMoveStartPosWithPosEvent Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dPos As Double, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double, ByVal lEventAxisNo As Integer, ByVal dComparePosition As Double, ByVal uPositionSource As Integer) As Integer


' It slowdown stops by deceleration set for specific axis.
' dDecel : Deceleration value when stop.
Public Declare Function AxmMoveStop Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dDecel As Double) As Integer
' It slowdown stops by deceleration set for specific axis.(PCI-Nx04 Only)
' This API can decelerating immediately refardless of current acceleration/deceleration state. Also, it can be used for limited drive.
' -- Applicable functions : AxmMoveStartPos, AxmMoveVel, AxmLineMoveEx2.
' dDecel : Deceleration rate value at stop.
' Note : Deceleration rate value should be greater than or equal to deceleration rate of initial setting.
' Note : When deceleration setting is set to time unit, It must be less than or equal to initial settling time.
Public Declare Function AxmMoveStopEx Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dDecel As Double) As Integer
' Stops specific axis emergently .
Public Declare Function AxmMoveEStop Lib "AXL.dll" (ByVal lAxisNo As Integer) As Integer
' Stops specific axis slow down.
Public Declare Function AxmMoveSStop Lib "AXL.dll" (ByVal lAxisNo As Integer) As Integer


'========= Overdrive API ============================================================================
' Overdrives position.
' Adjust number of specific pulse before the move of specific axis is finished.
' Cautions : In here when put in the position subjected to overdrive, as the travel distance is put into the position value of relative form,
'            position must be put in as position value of relative form.
Public Declare Function AxmOverridePos Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dOverridePos As Double) As Integer


' Set the maximum velocity subjected to overdirve before velocity overdriving of specific axis.
' Caution : If the velocity overdrive is done 5 times, the max velocity shall be set among them.
Public Declare Function AxmOverrideSetMaxVel Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dOverrideMaxVel As Double) As Integer

' Overdrive velocity.
' Set velocity variably during the move of specific axis. (Make sure to set variably during the motion.)
' Caution: Before use of AxmOverrideVel API, set the maximum velocity which can be set by AxmOverrideMaxVel
' EX> If velocity overdrive two times,
' 1. Set the highest velocity among the two as the highest setting velocity of AxmOverrideMaxVel.
' 2. Set the AxmOverrideVel  variably with the velocity in the moving of AxmMoveStartPos execution specific axis (including move API all) as the first velocity.
' 3. Set the AxmOverrideVel  variably with the velocity in the moving of specific axis (including move API all) as the 2nd velocity.
Public Declare Function AxmOverrideVel Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dOverrideVel As Double) As Integer

' Overdrive velocity.
' Set velocity variably during the move of specific axis. (Make sure to set variably during the motion.)
' Caution: Before use of AxmOverrideVel API, set the maximum velocity which can be set by AxmOverrideMaxVel
' EX> If velocity overdrive two times,
' 1. Set the highest velocity among the two as the highest setting velocity of AxmOverrideMaxVel.
' 2. Set the AxmOverrideAccelVelDecel  variably with the velocity in the moving of AxmMoveStartPos execution specific axis (including move API all) as the first velocity.
' 3. Set the AxmOverrideAccelVelDecel  variably with the velocity in the moving of specific axis (including move API all) as the 2nd velocity.
Public Declare Function AxmOverrideAccelVelDecel Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dOverrideVel As Double, ByVal dMaxAccel As Double, ByVal dMaxDecel As Double) As Integer

' Velocity overdrive at certain timing.
' API which becomes overdrive at the position when a certain position point and velocity to be overdrived
' lTarget : COMMAND(0), ACTUAL(1)
Public Declare Function AxmOverrideVelAtPos Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dPos As Double, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double, ByVal dOverridePos As Double, ByVal dOverrideVel As Double, ByVal lTarget As Integer) As Integer
' Override with specified velocity at specified times.
' lArraySize     : Set number of positions to override.
' *dpOverridePos : An array of positions to override. (It should be greater than or equal to set value at lArraySize.)
' *dpOverrideVel : Velocity array to be changed at position to override. (It should be greater than or equal to set value at lArraySize.)
' lTarget        : COMMAND(0), ACTUAL(1)
' dwOverrideMode : Specify how to start overriding.
'                : OVERRIDE_POS_START(0) - Start override at specified velocity at specified position.
'                : OVERRIDE_POS_END(1)   - Start override in advance to become specified velocity at specified position.
Public Declare Function AxmOverrideVelAtMultiPos Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dPos As Double, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double, ByVal lArraySize As Integer, ByRef dpOverridePos As Double, ByRef dpOverrideVel As Double, ByVal lTarget As Integer, ByVal lOverrideMode As Integer) As Integer


'========= Move API by master, slave gear ration. ===========================================================================

' Override with specified velocity/acceleration/deceleration at specified times.(MLII Only)
' lArraySize     : Set number of positions to override.
' *dpOverridePos : An array of positions to override. (It should be greater than or equal to set value at lArraySize.)
' *dpOverrideVel : Velocity array to be changed at position to override. (It should be greater than or equal to set value at lArraySize.)
' *dpOverrideAccelDecel : Acceleration/Deceleration array to be changed at position to override. (It should be greater than or equal to set value at lArraySize.)
' lTarget        : COMMAND(0), ACTUAL(1)
' dwOverrideMode : Specify how to start overriding.
'                : OVERRIDE_POS_START(0) - Start overriding at specified velocity at specified position.
'                : OVERRIDE_POS_END(1)   - Start overriding in advance to become specified velocity at specified position.
'                : OVERRIDE_POS_AUTO(2)  - Start overriding at specified velocity at specified position when in acceleration section.
'                                          Also, start overriding in advance to become specified velocity at specified position when in deceleration section.
Public Declare Function AxmOverrideVelAtMultiPos2 Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dPos As Double, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double, ByVal lArraySize As Integer, ByRef dpOverridePos As Double, ByRef dpOverrideVel As Double, ByRef dpOverrideAccelDecel As Double, ByVal lTarget As Integer, ByVal dwOverrideMode As Integer) As Integer

' In Electric Gear mode, set gear ratio between master axis and slave axis.
' dSlaveRatio : Gear ratio of slave against to master axis ( 0 : 0% , 0.5 : 50%, 1 : 100%)
Public Declare Function AxmLinkSetMode Lib "AXL.dll" (ByVal lMasterAxisNo As Integer, ByVal lSlaveAxisNo As Integer, ByVal dSlaveRatio As Double) As Integer
' In Electric Gear mode, return gear ratio between master axis and slave axis.
Public Declare Function AxmLinkGetMode Lib "AXL.dll" (ByVal lMasterAxisNo As Integer, ByVal lSlaveAxisNo As Integer, ByRef dpGearRatio As Double) As Integer
' Reset electric gear ration between Master axis and slave axis.
Public Declare Function AxmLinkResetMode Lib "AXL.dll" (ByVal lMasterAxisNo As Integer) As Integer


'======== API related to gentry ===========================================================================================================================================================
' Motion module supports gentry move system control which two axes are linked mechanically..
' When set master axis for gentry control by using this API, relevant slave axis synchronizes with master axis and moves.
' However after setting of gentry, even if any move command or stop command is directed, they are ignored
' uSlHomeUse     : Whether to use home of slave axis or not ( 0 - 2)
'             (0 : Search home of master axis without using home of slave axis.)
'             (1 : Search home of master axis, slave axis. Compensating by applying slave dSlOffset value.)
'             (2 : Search home of master axis, slave axis. No compensating by applying slave dSlOffset value.))
' dSlOffset      : Offset value of slave axis
' dSlOffsetRange : Set offset value range of slave axis.
' Caution in use : When gentry is enabled, it is normal operation if the slave axis is verified as Inmotion by AxmStatusReadMotion API in its motion, and verified as True.
'                When slave axis is verified by AxmStatusReadMotion, if InMotion is False then Gantry Enable is not available, therefore verify whether alarm hits limit.

Public Declare Function AxmGantrySetEnable Lib "AXL.dll" (ByVal lMasterAxisNo As Integer, ByVal lSlaveAxisNo As Integer, ByVal uSlHomeUse As Integer, ByVal dSlOffset As Double, ByVal dSlOffsetRange As Double) As Integer


